# Concrete

./: .gitignore  CMakeLists.txt
Asset/: Sample.blend
Shader/: README.md  compile.bat  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
Source/: Backbuffer.cpp  Backbuffer.h  CMakeLists.txt  Config.h.in  DescriptorPool.cpp  DescriptorPool.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  Device.cpp  Device.h  Engine.cpp  Engine.h  EngineLink.cpp  EngineLink.h  Handle.cpp  Handle.h  Image.cpp  Image.h  Instance.cpp  Instance.h  Link.h  LogicalDevice.cpp  Object.cpp  Object.h  Ownership.cpp  Ownership.h  Panic.cpp  Panic.h  PhysicalDevice.cpp  PhysicalDevice.h  Pipeline.cpp  Pipeline.h  PipelineLayout.cpp  PipelineLayout.h  RenderPass.cpp  RenderPass.h  Scope.cpp  Scope.h  ScopeLink.h  Scoped.cpp  (+20 more)
